add an intro card

--- a/index.html
+++ b/index.html
@@ -17,11 +17,23 @@
   </div>
 
 
-  <div class="container">
+  <div class="container intro">
     <div class="avatar-container">
         <img class="avatar circle img-responsive" src="static/avatar.png">
     </div>
+    <div class="col center">
+      <h1 class="name">Joel Tannas</h1>
+      <h2 class="tagline">Full stack web developer, clean code enthusiast, and all-around nerd</h2>
+      <div class="divider"></div>
+      <p>I'm a junior full stack developer with a systems-thinking point of view. I picked up programming and database development back in 2010 to automate tasks as a mechanical engineer. I'm passionate about code quality - minimizing maintenance expenses & bugs through thoughtful design and clean, modular code.</p>
+    </div>
+  </div>
 
+  <div class="parallax-container">
+    <div class="parallax"><img class="background" src="static/background2.jpg"></div>
+  </div>
+
+  <div class="container">
     <div class="section">
 
       <!--   Icon Section   -->
@@ -66,7 +78,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="static/background2.jpg" alt="Unsplashed background img 2"></div>
+    <div class="parallax"><img src="static/background3.png" alt="Unsplashed background img 2"></div>
   </div>
 
   <div class="container">
@@ -92,7 +104,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="static/background3.png" alt="Unsplashed background img 3"></div>
+    <div class="parallax"><img src="static/background4.jpg" alt="Unsplashed background img 3"></div>
   </div>
 
   <footer class="page-footer teal">
@@ -126,7 +138,7 @@
     </div>
     <div class="footer-copyright">
       <div class="container">
-      Made by <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
+      Made using <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
       </div>
     </div>
   </footer>
