--- a/index.html
+++ b/index.html
@@ -25,47 +25,187 @@
       <h1 class="name">Joel Tannas</h1>
       <h2 class="tagline">Full stack web developer, clean code enthusiast, and all-around nerd</h2>
       <div class="divider"></div>
-      <p>I'm a junior full stack developer with a systems-thinking point of view. I picked up programming and database development back in 2010 to automate tasks as a mechanical engineer. I'm passionate about code quality - minimizing maintenance expenses & bugs through thoughtful design and clean, modular code.</p>
+      <p>I'm a junior full stack developer with a systems-thinking point of view. I picked up programming and database development back in 2010 to automate tasks as a mechanical engineer. I'm passionate about code quality - minimizing maintenance expenses &amp; bugs through thoughtful design and clean, modular code.</p>
     </div>
   </div>
 
-  <div class="parallax-container">
+  <div class="parallax-container valign-wrapper">
+    <div class="section no-pad-bot">
+      <div class="container">
+        <div class="row center">
+          <h5 class="header col s12 light">Technologies That I've Worked With</h5>
+        </div>
+      </div>
+    </div>
     <div class="parallax"><img class="background" src="static/background2.jpg"></div>
   </div>
 
   <div class="container">
     <div class="section">
-
-      <!--   Icon Section   -->
       <div class="row">
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
-            <h5 class="center">Speeds up development</h5>
 
-            <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
+        <div class="col s15 m4">
+          <div class="card hoverable">
+            <div class="card-image">
+              <img class="activator" src="static/code.png">
+
+              <a class="btn-floating halfway-fab waves-effect waves-light purple activator"><i class="material-icons">add</i></a>
+            </div>
+            <div class="card-content">
+              <span class="card-title">Languages</span>
+              <p>I believe that code should generally prioritize readability over cleverness, whatever language it is in.</p>
+            </div>
+            <div class="card-reveal">
+              <span class="card-title grey-text text-darken-4">Languages<i class="material-icons right">close</i></span>
+              <ul class="collection">
+                <li class="collection-item">Bash</li>
+                <li class="collection-item">C</li>
+                <li class="collection-item">CSS / SCSS / SASS</li>
+                <li class="collection-item">HTML</li>
+                <li class="collection-item">Javascript</li>
+                <li class="collection-item">Python</li>
+                <li class="collection-item">Ruby</li>
+                <li class="collection-item">SQL</li>
+                <li class="collection-item">VBA</li>
+              </ul>
+            </div>
           </div>
         </div>
 
         <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">group</i></h2>
-            <h5 class="center">User Experience Focused</h5>
+          <div class="card hoverable">
+            <div class="card-image">
+              <img class="activator" src="static/server.png">
 
-            <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow for a more unified user experience.</p>
+              <a class="btn-floating halfway-fab waves-effect waves-light purple activator"><i class="material-icons">add</i></a>
+            </div>
+            <div class="card-content">
+              <span class="card-title">Infrastructure</span>
+              <p>I am terrified of pressing the wrong button and accidentally wiping the servers, so I'm a big fan of infrastructure as code.</p>
+            </div>
+            <div class="card-reveal">
+              <span class="card-title grey-text text-darken-4">Infrastructure<i class="material-icons right">close</i></span>
+              <ul class="collection">
+                <li class="collection-item">Ansible</li>
+                <li class="collection-item">AWS</li>
+                <li class="collection-item">Heroku</li>
+                <li class="collection-item">Linux (Ubuntu / XUbuntu)</li>
+                <li class="collection-item">Mac OS X</li>
+                <li class="collection-item">MongoDB</li>
+                <li class="collection-item">MS Access</li>
+                <li class="collection-item">PostgreSQL</li>
+                <li class="collection-item">SQLite</li>
+              </ul>
+            </div>
           </div>
         </div>
 
         <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
-            <h5 class="center">Easy to work with</h5>
-
-            <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
+          <div class="card hoverable">
+            <div class="card-image">
+              <img class="activator" src="static/api.png">
+              <a class="btn-floating halfway-fab waves-effect waves-light purple activator"><i class="material-icons">add</i></a>
+            </div>
+            <div class="card-content">
+              <span class="card-title">Back End</span>
+              <p>I enjoy building modular &amp; extensible APIs. Get your data structures right and the rest becomes so much easier.</p>
+            </div>
+            <div class="card-reveal">
+              <span class="card-title grey-text text-darken-4">Back End<i class="material-icons right">close</i></span>
+              <ul class="collection">
+                <li class="collection-item">ActiveRecord</li>
+                <li class="collection-item">Django</li>
+                <li class="collection-item">ExpressJS</li>
+                <li class="collection-item">Flask</li>
+                <li class="collection-item">GCC</li>
+                <li class="collection-item">NodeJS</li>
+                <li class="collection-item">Ruby-on-Rails</li>
+                <li class="collection-item">SQLAlchemy</li>
+              </ul>
+            </div>
           </div>
         </div>
+
+        <div class="col s12 m4">
+          <div class="card hoverable">
+            <div class="card-image">
+              <img class="activator" src="static/react.png ">
+
+              <a class="btn-floating halfway-fab waves-effect waves-light purple activator"><i class="material-icons">add</i></a>
+            </div>
+            <div class="card-content">
+              <span class="card-title">Front End</span>
+              <p>The new wave of declarative &amp; component based Javascript frameworks has really opened my eyes to the fun of frontend.</p>
+            </div>
+            <div class="card-reveal">
+              <span class="card-title grey-text text-darken-4">Front End<i class="material-icons right">close</i></span>
+              <ul class="collection">
+                <li class="collection-item">AJAX</li>
+                <li class="collection-item">Babel</li>
+                <li class="collection-item">Bootstrap</li>
+                <li class="collection-item">jQuery</li>
+                <li class="collection-item">Material Design</li>
+                <li class="collection-item">ReactJS / Redux</li>
+                <li class="collection-item">REST</li>
+                <li class="collection-item">Webpack</li>
+                <li class="collection-item">WebSockets</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <div class="col s12 m4">
+          <div class="card hoverable">
+            <div class="card-image">
+              <img class="activator" src="static/tdd.png" style="border-bottom: 1px solid gray">
+              <a class="btn-floating halfway-fab waves-effect waves-light purple activator"><i class="material-icons">add</i></a>
+            </div>
+            <div class="card-content">
+              <span class="card-title">Linting &amp; Testing</span>
+              <p>Changing untested unproduction code makes me really nervous - like something is waiting to jump out and get me.</p>
+            </div>
+            <div class="card-reveal">
+              <span class="card-title grey-text text-darken-4">Linting &amp; Testing<i class="material-icons right">close</i></span>
+              <ul class="collection">
+                <li class="collection-item">Capybara</li>
+                <li class="collection-item">ChaiJS / MochaJS</li>
+                <li class="collection-item">Doctest.py</li>
+                <li class="collection-item">Mock.py</li>
+                <li class="collection-item">PyLint</li>
+                <li class="collection-item">RewireJS</li>
+                <li class="collection-item">RSpec</li>
+                <li class="collection-item">SinonJS</li>
+                <li class="collection-item">UnitTest.py</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <div class="col s12 m4">
+          <div class="card hoverable">
+            <div class="card-image">
+              <img class="activator" src="static/rtd.png">
+              <a class="btn-floating halfway-fab waves-effect waves-light purple activator"><i class="material-icons">add</i></a>
+            </div>
+            <div class="card-content">
+              <span class="card-title">Documentation</span>
+              <p>Code should be self-documenting as much as possible, but everyone needs a TL;DR.</p>
+            </div>
+            <div class="card-reveal">
+              <span class="card-title grey-text text-darken-4">Documentation<i class="material-icons right">close</i></span>
+              <ul class="collection">
+                <li class="collection-item">JSDoc</li>
+                <li class="collection-item">Markdown</li>
+                <li class="collection-item">MS Word</li>
+                <li class="collection-item">Python DocBlocks</li>
+                <li class="collection-item">Read The Docs</li>
+                <li class="collection-item">Sphinx RST</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
       </div>
-
     </div>
   </div>
 
