--- a/index.html
+++ b/index.html
@@ -45,11 +45,14 @@
       <div class="row">
 
         <div class="col s15 m4">
-          <div class="card hoverable">
+          <div class="card large hoverable">
             <div class="card-image">
               <img class="activator" src="static/code.png">
-
-              <a class="btn-floating halfway-fab waves-effect waves-light purple activator"><i class="material-icons">add</i></a>
+            </div>
+            <div class="card-fab">
+              <a class="btn-floating halfway-fab waves-effect waves-light purple activator" title="LEARN MORE">
+                <i class="material-icons">add</i>
+              </a>
             </div>
             <div class="card-content">
               <span class="card-title">Languages</span>
@@ -73,15 +76,18 @@
         </div>
 
         <div class="col s12 m4">
-          <div class="card hoverable">
+          <div class="card large hoverable">
             <div class="card-image">
               <img class="activator" src="static/server.png">
-
-              <a class="btn-floating halfway-fab waves-effect waves-light purple activator"><i class="material-icons">add</i></a>
+            </div>
+            <div class="card-fab">
+              <a class="btn-floating halfway-fab waves-effect waves-light purple activator" title="LEARN MORE">
+                <i class="material-icons">add</i>
+              </a>
             </div>
             <div class="card-content">
               <span class="card-title">Infrastructure</span>
-              <p>I am terrified of pressing the wrong button and accidentally wiping the servers, so I'm a big fan of infrastructure as code.</p>
+              <p>I am terrified of pressing the wrong button and wiping the servers, so I'm a big fan of infrastructure as code.</p>
             </div>
             <div class="card-reveal">
               <span class="card-title grey-text text-darken-4">Infrastructure<i class="material-icons right">close</i></span>
@@ -101,10 +107,14 @@
         </div>
 
         <div class="col s12 m4">
-          <div class="card hoverable">
+          <div class="card large hoverable">
             <div class="card-image">
               <img class="activator" src="static/api.png">
-              <a class="btn-floating halfway-fab waves-effect waves-light purple activator"><i class="material-icons">add</i></a>
+            </div>
+            <div class="card-fab">
+              <a class="btn-floating halfway-fab waves-effect waves-light purple activator" title="LEARN MORE">
+                <i class="material-icons">add</i>
+              </a>
             </div>
             <div class="card-content">
               <span class="card-title">Back End</span>
@@ -127,11 +137,14 @@
         </div>
 
         <div class="col s12 m4">
-          <div class="card hoverable">
+          <div class="card large hoverable">
             <div class="card-image">
               <img class="activator" src="static/react.png ">
-
-              <a class="btn-floating halfway-fab waves-effect waves-light purple activator"><i class="material-icons">add</i></a>
+            </div>
+            <div class="card-fab">
+              <a class="btn-floating halfway-fab waves-effect waves-light purple activator" title="LEARN MORE">
+                <i class="material-icons">add</i>
+              </a>
             </div>
             <div class="card-content">
               <span class="card-title">Front End</span>
@@ -155,10 +168,14 @@
         </div>
 
         <div class="col s12 m4">
-          <div class="card hoverable">
+          <div class="card large hoverable">
             <div class="card-image">
               <img class="activator" src="static/tdd.png" style="border-bottom: 1px solid gray">
-              <a class="btn-floating halfway-fab waves-effect waves-light purple activator"><i class="material-icons">add</i></a>
+            </div>
+            <div class="card-fab">
+              <a class="btn-floating halfway-fab waves-effect waves-light purple activator" title="LEARN MORE">
+                <i class="material-icons">add</i>
+              </a>
             </div>
             <div class="card-content">
               <span class="card-title">Linting &amp; Testing</span>
@@ -182,10 +199,14 @@
         </div>
 
         <div class="col s12 m4">
-          <div class="card hoverable">
+          <div class="card large hoverable">
             <div class="card-image">
               <img class="activator" src="static/rtd.png">
-              <a class="btn-floating halfway-fab waves-effect waves-light purple activator"><i class="material-icons">add</i></a>
+            </div>
+            <div class="card-fab">
+              <a class="btn-floating halfway-fab waves-effect waves-light purple activator" title="LEARN MORE">
+                <i class="material-icons">add</i>
+              </a>
             </div>
             <div class="card-content">
               <span class="card-title">Documentation</span>
@@ -214,7 +235,7 @@
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+          <h5 class="header col s12 light">Projects I'm Proud Of</h5>
         </div>
       </div>
     </div>
@@ -223,15 +244,75 @@
 
   <div class="container">
     <div class="section">
-
       <div class="row">
-        <div class="col s12 center">
-          <h3><i class="mdi-content-send brown-text"></i></h3>
-          <h4>Contact Us</h4>
-          <p class="left-align light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo, ullamcorper a sapien id, viverra ultrices eros. Morbi sem neque, posuere et pretium eget, bibendum sollicitudin lacus. Aliquam eleifend sollicitudin diam, eu mattis nisl maximus sed. Nulla imperdiet semper molestie. Morbi massa odio, condimentum sed ipsum ac, gravida ultrices erat. Nullam eget dignissim mauris, non tristique erat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
-        </div>
-      </div>
 
+        <div class="col s20 m6">
+          <div class="card large hoverable">
+            <div class="card-image">
+              <img src="https://github.com/jtannas/slug-feed/blob/master/client/src/img/logo-phase-icon-03.png?raw=true">
+            </div>
+            <div class="card-fab">
+              <a class="btn-floating halfway-fab waves-effect waves-light purple activator" title="LEARN MORE">
+                <i class="material-icons">add</i>
+              </a>
+            </div>
+            <div class="card-content">
+              <span class="card-title">SlugFeed</span>
+              <p><i>A better way to slug it out in the internet.</i></p>
+            </div>
+            <div class="card-action">
+              <a class="btn-floating white github-circle" href="https://github.com/jtannas/slug-feed"></a>
+              <a class="btn-floating blue"><i class="material-icons">link</i></a>
+            </div>
+            <div class="card-reveal">
+              <span class="card-title grey-text text-darken-4">Details<i class="material-icons right">close</i></span>
+              <p>Our team created a better way to comment on web articles that encourages dialogue using sentiment analysis and an innovative UI.</p>
+              <ul class="collection with-header">
+                <li class="collection-header"><h5>Tech Highlights</h5></li>
+                <li class="collection-item">Google Language API</li>
+                <li class="collection-item">Auth0 Single Sign On</li>
+                <li class="collection-item">React / ReactDOM / Redux / ReactRouter</li>
+                <li class="collection-item">NodeJS / ExpressJS / Knex</li>
+                <li class="collection-item">PostgreSQL</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <div class="col s20 m6">
+          <div class="card large hoverable">
+            <div class="card-image">
+              <img src="https://github.com/jtannas/tweeter/blob/master/public/images/bird.png?raw=true">
+            </div>
+            <div class="card-fab">
+              <a class="btn-floating halfway-fab waves-effect waves-light purple activator" title="LEARN MORE">
+                <i class="material-icons">add</i>
+              </a>
+            </div>
+            <div class="card-content">
+              <span class="card-title">Tweeter</span>
+              <p><i>Simple Twitter Clone to learn AJAX fundamentals.</i></p>
+            </div>
+            <div class="card-action">
+              <a class="btn-floating white github-circle" href="https://github.com/jtannas/tweeter"></a>
+              <a class="btn-floating blue"><i class="material-icons">link</i></a>
+            </div>
+            <div class="card-reveal">
+              <span class="card-title grey-text text-darken-4">Details<i class="material-icons right">close</i></span>
+              <p>I used this project to get become more familiar with front end technologies.</p>
+              <ul class="collection with-header">
+                <li class="collection-header"><h5>Tech Highlights</h5></li>
+                <li class="collection-item">AJAX</li>
+                <li class="collection-item">jQuery</li>
+                <li class="collection-item">SASS</li>
+                <li class="collection-item">MongoDB</li>
+                <li class="collection-item">HTML5</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+      </div>
     </div>
   </div>
 
@@ -240,7 +321,7 @@
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+          <h5 class="header col s12 light">Contact Information</h5>
         </div>
       </div>
     </div>
@@ -248,34 +329,6 @@
   </div>
 
   <footer class="page-footer teal">
-    <div class="container">
-      <div class="row">
-        <div class="col l6 s12">
-          <h5 class="white-text">Company Bio</h5>
-          <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our full time job. Any amount would help support and continue development on this project and is greatly appreciated.</p>
-
-
-        </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">Settings</h5>
-          <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
-          </ul>
-        </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">Connect</h5>
-          <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
     <div class="footer-copyright">
       <div class="container">
       Made using <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
