complete project cards first draft

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         <div class="col s12 m4">
           <div class="card large hoverable">
             <div class="card-image">
-              <img class="activator" src="static/tdd.png" style="border-bottom: 1px solid gray">
+              <img class="activator" src="static/bug.jpg" style="border-bottom: 1px solid gray">
             </div>
             <div class="card-fab">
               <a class="btn-floating halfway-fab waves-effect waves-light purple activator" title="LEARN MORE">
@@ -179,7 +179,7 @@
             </div>
             <div class="card-content">
               <span class="card-title">Linting &amp; Testing</span>
-              <p>Changing untested unproduction code makes me really nervous - like something is waiting to jump out and get me.</p>
+              <p>Changing untested unproduction code makes me really nervous - like something is waiting to jump out and get me. BOO!!!!</p>
             </div>
             <div class="card-reveal">
               <span class="card-title grey-text text-darken-4">Linting &amp; Testing<i class="material-icons right">close</i></span>
@@ -215,6 +215,7 @@
             <div class="card-reveal">
               <span class="card-title grey-text text-darken-4">Documentation<i class="material-icons right">close</i></span>
               <ul class="collection">
+                <li class="collection-item">Git</li>
                 <li class="collection-item">JSDoc</li>
                 <li class="collection-item">Markdown</li>
                 <li class="collection-item">MS Word</li>
@@ -246,9 +247,9 @@
     <div class="section">
       <div class="row">
 
-        <div class="col s20 m6">
-          <div class="card large hoverable">
-            <div class="card-image">
+        <div class="col m4">
+          <div class="card medium hoverable">
+            <div class="card-image project-image">
               <img src="https://github.com/jtannas/slug-feed/blob/master/client/src/img/logo-phase-icon-03.png?raw=true">
             </div>
             <div class="card-fab">
@@ -266,23 +267,140 @@
             </div>
             <div class="card-reveal">
               <span class="card-title grey-text text-darken-4">Details<i class="material-icons right">close</i></span>
-              <p>Our team created a better way to comment on web articles that encourages dialogue using sentiment analysis and an innovative UI.</p>
-              <ul class="collection with-header">
-                <li class="collection-header"><h5>Tech Highlights</h5></li>
+              <p>Our team created a better way to comment on web articles using sentiment analysis and an innovative UI.</p>
+              <span class="card-title grey-text text-darken-4">Tech Highlights</span>
+              <ul class="collection">
                 <li class="collection-item">Google Language API</li>
                 <li class="collection-item">Auth0 Single Sign On</li>
-                <li class="collection-item">React / ReactDOM / Redux / ReactRouter</li>
-                <li class="collection-item">NodeJS / ExpressJS / Knex</li>
-                <li class="collection-item">PostgreSQL</li>
+                <li class="collection-item">Node API + React</li>
               </ul>
             </div>
           </div>
         </div>
 
-        <div class="col s20 m6">
-          <div class="card large hoverable">
-            <div class="card-image">
-              <img src="https://github.com/jtannas/tweeter/blob/master/public/images/bird.png?raw=true">
+        <div class="col m4">
+          <div class="card medium hoverable">
+            <div class="card-image project-image" style="background-image:url(static/rubyrails.png)">
+            </div>
+            <div class="card-fab">
+              <a class="btn-floating halfway-fab waves-effect waves-light purple activator" title="LEARN MORE">
+                <i class="material-icons">add</i>
+              </a>
+            </div>
+            <div class="card-content">
+              <span class="card-title">Jungle</span>
+              <p><i>Ruby-on-Rails Amazon Clone</i></p>
+            </div>
+            <div class="card-action">
+              <a class="btn-floating white github-circle" href="https://github.com/jtannas/jungle-rails"></a>
+              <a class="btn-floating blue" href="https://evening-temple-13530.herokuapp.com/"><i class="material-icons">link</i></a>
+            </div>
+            <div class="card-reveal">
+              <span class="card-title grey-text text-darken-4">Details<i class="material-icons right">close</i></span>
+              <p>An e-commerce website made using Ruby-on-Rails that I inherited and added features to.</p>
+              <span class="card-title grey-text text-darken-4">Tech Highlights</span>
+              <ul class="collection">
+                <li class="collection-item">Ruby-on-Rails</li>
+                <li class="collection-item">RSpec + Capybara</li>
+                <li class="collection-item">ActiveRecord</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <div class="col m4">
+          <div class="card medium hoverable">
+            <div class="card-image project-image" style="background-image:url(static/chat.png)">
+            </div>
+            <div class="card-fab">
+              <a class="btn-floating halfway-fab waves-effect waves-light purple activator" title="LEARN MORE">
+                <i class="material-icons">add</i>
+              </a>
+            </div>
+            <div class="card-content">
+              <span class="card-title">Chatter</span>
+              <p><i>Real-Time Web Messaging App</i></p>
+            </div>
+            <div class="card-action">
+              <a class="btn-floating white github-circle" href="https://github.com/jtannas/Chatter"></a>
+              <a class="btn-floating blue"><i class="material-icons">link</i></a>
+            </div>
+            <div class="card-reveal">
+              <span class="card-title grey-text text-darken-4">Details<i class="material-icons right">close</i></span>
+              <p>A single page chat application built to familiarize myself with React and with websockets</p>
+              <span class="card-title grey-text text-darken-4">Tech Highlights</span>
+              <ul class="collection">
+                <li class="collection-item">React</li>
+                <li class="collection-item">Webpack</li>
+                <li class="collection-item">Websockets</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <div class="col m4">
+          <div class="card medium hoverable">
+            <div class="card-image project-image" style="background-image:url(static/calendar.png)">
+            </div>
+            <div class="card-fab">
+              <a class="btn-floating halfway-fab waves-effect waves-light purple activator" title="LEARN MORE">
+                <i class="material-icons">add</i>
+              </a>
+            </div>
+            <div class="card-content">
+              <span class="card-title">Schoodle</span>
+              <p><i>No Login Voting App</i></p>
+            </div>
+            <div class="card-action">
+              <a class="btn-floating white github-circle" href="https://github.com/emily-gao/schoodle"></a>
+              <a class="btn-floating blue"><i class="material-icons">link</i></a>
+            </div>
+            <div class="card-reveal">
+              <span class="card-title grey-text text-darken-4">Details<i class="material-icons right">close</i></span>
+              <p>My first time collaborating with some on an app from start to finish.</p>
+              <span class="card-title grey-text text-darken-4">Tech Highlights</span>
+              <ul class="collection">
+                <li class="collection-item">jQuery</li>
+                <li class="collection-item">Express API</li>
+                <li class="collection-item">Git</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <div class="col m4">
+          <div class="card medium hoverable">
+            <div class="card-image project-image" style="background-image:url(static/cut.png)">
+            </div>
+            <div class="card-fab">
+              <a class="btn-floating halfway-fab waves-effect waves-light purple activator" title="LEARN MORE">
+                <i class="material-icons">add</i>
+              </a>
+            </div>
+            <div class="card-content">
+              <span class="card-title">TinyApp</span>
+              <p><i>TinyUrl clone and my introduction to ExpressJS</i></p>
+            </div>
+            <div class="card-action">
+              <a class="btn-floating white github-circle" href="https://github.com/jtannas/tinyApp"></a>
+              <a class="btn-floating blue"><i class="material-icons">link</i></a>
+            </div>
+            <div class="card-reveal">
+              <span class="card-title grey-text text-darken-4">Details<i class="material-icons right">close</i></span>
+              <p>A simple app where I became more comfortable with the request/response model.</p>
+              <span class="card-title grey-text text-darken-4">Tech Highlights</span>
+              <ul class="collection">
+                <li class="collection-item">NodeJS</li>
+                <li class="collection-item">ExpressJS</li>
+                <li class="collection-item">EJS Templates</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <div class="col m4">
+          <div class="card medium hoverable">
+            <div class="card-image project-image" style="background-image:url(https://github.com/jtannas/tweeter/blob/master/public/images/bird.png?raw=true)">
             </div>
             <div class="card-fab">
               <a class="btn-floating halfway-fab waves-effect waves-light purple activator" title="LEARN MORE">
@@ -291,7 +409,7 @@
             </div>
             <div class="card-content">
               <span class="card-title">Tweeter</span>
-              <p><i>Simple Twitter Clone to learn AJAX fundamentals.</i></p>
+              <p><i>Simple Twitter Clone to start learning Single Page App Tech.</i></p>
             </div>
             <div class="card-action">
               <a class="btn-floating white github-circle" href="https://github.com/jtannas/tweeter"></a>
@@ -299,14 +417,101 @@
             </div>
             <div class="card-reveal">
               <span class="card-title grey-text text-darken-4">Details<i class="material-icons right">close</i></span>
-              <p>I used this project to get become more familiar with front end technologies.</p>
-              <ul class="collection with-header">
-                <li class="collection-header"><h5>Tech Highlights</h5></li>
-                <li class="collection-item">AJAX</li>
-                <li class="collection-item">jQuery</li>
+              <p>A single page app that I used to get become more familiar with front end technologies, especially AJAX.</p>
+              <span class="card-title grey-text text-darken-4">Tech Highlights</span>
+              <ul class="collection">
+                <li class="collection-item">jQuery AJAX</li>
                 <li class="collection-item">SASS</li>
                 <li class="collection-item">MongoDB</li>
-                <li class="collection-item">HTML5</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <div class="col m4">
+          <div class="card medium hoverable">
+            <div class="card-image project-image" style="background-image:url(static/news.jpg)">
+            </div>
+            <div class="card-fab">
+              <a class="btn-floating halfway-fab waves-effect waves-light purple activator" title="LEARN MORE">
+                <i class="material-icons">add</i>
+              </a>
+            </div>
+            <div class="card-content">
+              <span class="card-title">Mashup</span>
+              <p><i>My intro to APIs via Python + Javascript</i></p>
+            </div>
+            <div class="card-action">
+              <a class="btn-floating white github-circle" href="https://github.com/jtannas/CS50_Mashup"></a>
+              <a class="btn-floating blue"><i class="material-icons">link</i></a>
+            </div>
+            <div class="card-reveal">
+              <span class="card-title grey-text text-darken-4">Details<i class="material-icons right">close</i></span>
+              <p>A mashup of data from a news RSS feed overlaid onto google maps markers (USA only).</p>
+              <span class="card-title grey-text text-darken-4">Tech Highlights</span>
+              <ul class="collection">
+                <li class="collection-item">Python</li>
+                <li class="collection-item">Flask</li>
+                <li class="collection-item">Javascript</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <div class="col m4">
+          <div class="card medium hoverable">
+            <div class="card-image project-image" style="background-image:url(static/magic.png)">
+            </div>
+            <div class="card-fab">
+              <a class="btn-floating halfway-fab waves-effect waves-light purple activator" title="LEARN MORE">
+                <i class="material-icons">add</i>
+              </a>
+            </div>
+            <div class="card-content">
+              <span class="card-title">Spellcasting Guide</span>
+              <p><i>A relatable guide to the concepts of spellcasting in D&amp;D</i></p>
+            </div>
+            <div class="card-action">
+              <a class="btn-floating blue" href="https://www.reddit.com/r/DnD/comments/53xby9/oc_i_made_an_introduction_to_spellcasting_in_5e/?ref=share&ref_source=link"><i class="material-icons">link</i></a>
+            </div>
+            <div class="card-reveal">
+              <span class="card-title grey-text text-darken-4">Details<i class="material-icons right">close</i></span>
+              <p>Imaginary spellcasting is complicated. I simplified it using alcohol.</p>
+              <span class="card-title grey-text text-darken-4">Tech Highlights</span>
+              <ul class="collection">
+                <li class="collection-item">Pen</li>
+                <li class="collection-item">Paper</li>
+                <li class="collection-item">Doodling</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <div class="col m4">
+          <div class="card medium hoverable">
+            <div class="card-image project-image" style="background-image:url(static/d20.png)">
+            </div>
+            <div class="card-fab">
+              <a class="btn-floating halfway-fab waves-effect waves-light purple activator" title="LEARN MORE">
+                <i class="material-icons">add</i>
+              </a>
+            </div>
+            <div class="card-content">
+              <span class="card-title">The Wealthy Merchant</span>
+              <p><i>An introductory adventure for Dungeons &amp; Dragons</i></p>
+            </div>
+            <div class="card-action">
+              <a class="btn-floating white github-circle" href="https://github.com/jtannas/the-wealthy-merchant"></a>
+              <a class="btn-floating blue" href="http://www.dmsguild.com/product/194450/An-Introduction-to-DD--The-Wealthy-Merchant"><i class="material-icons">link</i></a>
+            </div>
+            <div class="card-reveal">
+              <span class="card-title grey-text text-darken-4">Details<i class="material-icons right">close</i></span>
+              <p>A stripped down version of D&amp;D for converting board gamers into role players.</p>
+              <span class="card-title grey-text text-darken-4">Tech Highlights</span>
+              <ul class="collection">
+                <li class="collection-item">The Homebrewery</li>
+                <li class="collection-item">Markdown</li>
+                <li class="collection-item">Adobe Acrobat</li>
               </ul>
             </div>
           </div>
@@ -321,7 +526,7 @@
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h5 class="header col s12 light">Contact Information</h5>
+          <h5 class="header col s12 light">Getting in Touch</h5>
         </div>
       </div>
     </div>
