--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
             </div>
             <div class="card-reveal">
               <span class="card-title grey-text text-darken-4">Details<i class="material-icons right">close</i></span>
-              <p>My first time collaborating with some on an app from start to finish.</p>
+              <p>My first time collaborating with someone on an app from start to finish.</p>
               <span class="card-title grey-text text-darken-4">Tech Highlights</span>
               <ul class="collection">
                 <li class="collection-item">jQuery</li>
