complete polish and contact info

--- a/index.html
+++ b/index.html
@@ -184,15 +184,15 @@
             <div class="card-reveal">
               <span class="card-title grey-text text-darken-4">Linting &amp; Testing<i class="material-icons right">close</i></span>
               <ul class="collection">
-                <li class="collection-item">Capybara</li>
-                <li class="collection-item">ChaiJS / MochaJS</li>
-                <li class="collection-item">Doctest.py</li>
-                <li class="collection-item">Mock.py</li>
-                <li class="collection-item">PyLint</li>
-                <li class="collection-item">RewireJS</li>
-                <li class="collection-item">RSpec</li>
-                <li class="collection-item">SinonJS</li>
-                <li class="collection-item">UnitTest.py</li>
+                <li class="collection-item">Test Driven Development</li>
+                <li class="collection-item">Automated Testing</li>
+                <li class="collection-item">Coverage Scanning</li>
+                <li class="collection-item">Test Mocks & Stubs</li>
+                <li class="collection-item">Style Guides</li>
+                <li class="collection-item">Code Formatters & Linters</li>
+                <li class="collection-item">Vulnerability Scanning</li>
+                <li class="collection-item">Complexity Analysis</li>
+                <li class="collection-item">Refactoring Legacy Code</li>
               </ul>
             </div>
           </div>
@@ -247,8 +247,8 @@
     <div class="section">
       <div class="row">
 
-        <div class="col m4">
-          <div class="card medium hoverable">
+        <div class="col m4 s12">
+          <div class="card large hoverable">
             <div class="card-image project-image">
               <img src="https://github.com/jtannas/slug-feed/blob/master/client/src/img/logo-phase-icon-03.png?raw=true">
             </div>
@@ -263,7 +263,6 @@
             </div>
             <div class="card-action">
               <a class="btn-floating white github-circle" href="https://github.com/jtannas/slug-feed"></a>
-              <a class="btn-floating blue"><i class="material-icons">link</i></a>
             </div>
             <div class="card-reveal">
               <span class="card-title grey-text text-darken-4">Details<i class="material-icons right">close</i></span>
@@ -278,8 +277,8 @@
           </div>
         </div>
 
-        <div class="col m4">
-          <div class="card medium hoverable">
+        <div class="col m4 s12">
+          <div class="card large hoverable">
             <div class="card-image project-image" style="background-image:url(static/rubyrails.png)">
             </div>
             <div class="card-fab">
@@ -293,7 +292,6 @@
             </div>
             <div class="card-action">
               <a class="btn-floating white github-circle" href="https://github.com/jtannas/jungle-rails"></a>
-              <a class="btn-floating blue" href="https://evening-temple-13530.herokuapp.com/"><i class="material-icons">link</i></a>
             </div>
             <div class="card-reveal">
               <span class="card-title grey-text text-darken-4">Details<i class="material-icons right">close</i></span>
@@ -308,8 +306,8 @@
           </div>
         </div>
 
-        <div class="col m4">
-          <div class="card medium hoverable">
+        <div class="col m4 s12">
+          <div class="card large hoverable">
             <div class="card-image project-image" style="background-image:url(static/chat.png)">
             </div>
             <div class="card-fab">
@@ -323,7 +321,6 @@
             </div>
             <div class="card-action">
               <a class="btn-floating white github-circle" href="https://github.com/jtannas/Chatter"></a>
-              <a class="btn-floating blue"><i class="material-icons">link</i></a>
             </div>
             <div class="card-reveal">
               <span class="card-title grey-text text-darken-4">Details<i class="material-icons right">close</i></span>
@@ -338,8 +335,8 @@
           </div>
         </div>
 
-        <div class="col m4">
-          <div class="card medium hoverable">
+        <div class="col m4 s12">
+          <div class="card large hoverable">
             <div class="card-image project-image" style="background-image:url(static/calendar.png)">
             </div>
             <div class="card-fab">
@@ -353,7 +350,6 @@
             </div>
             <div class="card-action">
               <a class="btn-floating white github-circle" href="https://github.com/emily-gao/schoodle"></a>
-              <a class="btn-floating blue"><i class="material-icons">link</i></a>
             </div>
             <div class="card-reveal">
               <span class="card-title grey-text text-darken-4">Details<i class="material-icons right">close</i></span>
@@ -368,8 +364,8 @@
           </div>
         </div>
 
-        <div class="col m4">
-          <div class="card medium hoverable">
+        <div class="col m4 s12">
+          <div class="card large hoverable">
             <div class="card-image project-image" style="background-image:url(static/cut.png)">
             </div>
             <div class="card-fab">
@@ -383,7 +379,6 @@
             </div>
             <div class="card-action">
               <a class="btn-floating white github-circle" href="https://github.com/jtannas/tinyApp"></a>
-              <a class="btn-floating blue"><i class="material-icons">link</i></a>
             </div>
             <div class="card-reveal">
               <span class="card-title grey-text text-darken-4">Details<i class="material-icons right">close</i></span>
@@ -398,8 +393,8 @@
           </div>
         </div>
 
-        <div class="col m4">
-          <div class="card medium hoverable">
+        <div class="col m4 s12">
+          <div class="card large hoverable">
             <div class="card-image project-image" style="background-image:url(https://github.com/jtannas/tweeter/blob/master/public/images/bird.png?raw=true)">
             </div>
             <div class="card-fab">
@@ -413,7 +408,6 @@
             </div>
             <div class="card-action">
               <a class="btn-floating white github-circle" href="https://github.com/jtannas/tweeter"></a>
-              <a class="btn-floating blue"><i class="material-icons">link</i></a>
             </div>
             <div class="card-reveal">
               <span class="card-title grey-text text-darken-4">Details<i class="material-icons right">close</i></span>
@@ -428,8 +422,8 @@
           </div>
         </div>
 
-        <div class="col m4">
-          <div class="card medium hoverable">
+        <div class="col m4 s12">
+          <div class="card large hoverable">
             <div class="card-image project-image" style="background-image:url(static/news.jpg)">
             </div>
             <div class="card-fab">
@@ -443,7 +437,6 @@
             </div>
             <div class="card-action">
               <a class="btn-floating white github-circle" href="https://github.com/jtannas/CS50_Mashup"></a>
-              <a class="btn-floating blue"><i class="material-icons">link</i></a>
             </div>
             <div class="card-reveal">
               <span class="card-title grey-text text-darken-4">Details<i class="material-icons right">close</i></span>
@@ -458,8 +451,8 @@
           </div>
         </div>
 
-        <div class="col m4">
-          <div class="card medium hoverable">
+        <div class="col m4 s12">
+          <div class="card large hoverable">
             <div class="card-image project-image" style="background-image:url(static/magic.png)">
             </div>
             <div class="card-fab">
@@ -487,8 +480,8 @@
           </div>
         </div>
 
-        <div class="col m4">
-          <div class="card medium hoverable">
+        <div class="col m4 s12">
+          <div class="card large hoverable">
             <div class="card-image project-image" style="background-image:url(static/d20.png)">
             </div>
             <div class="card-fab">
@@ -533,6 +526,19 @@
     <div class="parallax"><img src="static/background4.jpg" alt="Unsplashed background img 3"></div>
   </div>
 
+
+  <div class="container">
+    <div class="section">
+      <div class="row center">
+        <div class="linkedin-container">
+          <a href="https://www.linkedin.com/in/joel-tannas/"><img class="responsive-img linkedin-link" style="max-width:300px" src="static/view-linkedin.png"></a>
+        </div>
+        <p>The easiest way to get in touch with me is through my LinkedIn account. I also go to a lot of tech community meetups (eg. user groups for Python/Ruby/Devops). It will probably take me a day to get back to you while I juggle everything in my schedule, but I'm always happy to meet new people and go out for coffee.<p>
+
+      </div>
+    </div>
+  </div>
+
   <footer class="page-footer teal">
     <div class="footer-copyright">
       <div class="container">
@@ -540,7 +546,6 @@
       </div>
     </div>
   </footer>
-
 
   <!--  Scripts-->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
